--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>2.4.1</version>
         <configuration>
-          <mainClass>edu.escuelaing.arsw.tallerspring.WebSiteController</mainClass>
+          <mainClass>edu.escuelaing.arem.TallerSpring.app.WebSiteController</mainClass>
         </configuration>
         <executions>
           <execution>
